// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PushPullButton/> render when ahead of tracking branch 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 10 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M5 3L0 9h3v4h4V9h3L5 3z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Push origin
        </div>
        <div
          class="description"
        >
          Never fetched
        </div>
      </div>
      <div
        class="ahead-behind"
      >
        <span>
          5
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M3 5L0 9h2v2h2V9h2L3 5z"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when behind tracking branch 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 10 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 7V3H3v4H0l5 6 5-6H7z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Pull origin
        </div>
        <div
          class="description"
        >
          Never fetched
        </div>
      </div>
      <div
        class="ahead-behind"
      >
        <span>
          5
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M4 7V5H2v2H0l3 4 3-4H4z"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when branch can be force pushed 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 10 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M3 11H0l5-6 5 6H7v4H3v-4zM5 1l5 6H8.33L5 3 1.662 7H0l5-6z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Force push origin
        </div>
        <div
          class="description"
        >
          Never fetched
        </div>
      </div>
      <div
        class="ahead-behind"
      >
        <span>
          4
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M3 5L0 9h2v2h2V9h2L3 5z"
            />
          </svg>
        </span>
        <span>
          5
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M4 7V5H2v2H0l3 4 3-4H4z"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when branch is not published to GitHub remote 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish branch
        </div>
        <div
          class="description"
        >
          Publish this branch to GitHub
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when detached HEAD 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      disabled=""
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish branch
        </div>
        <div
          class="description"
        >
          Cannot publish detached HEAD
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when detached HEAD and rebase in progress 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      disabled=""
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish branch
        </div>
        <div
          class="description"
        >
          Rebase in progress
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when last fetch known 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 12 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M10.24 7.4a4.15 4.15 0 0 1-1.2 3.6 4.346 4.346 0 0 1-5.41.54L4.8 10.4.5 9.8l.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 0 0 1.74-4.46l-1.75-.34zM2.96 5a4.346 4.346 0 0 1 5.41-.54L7.2 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54C.5 5.03-.06 6.65.01 8.26l1.75.35A4.17 4.17 0 0 1 2.96 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Fetch origin
        </div>
        <div
          class="description"
        >
          <span>
            Last fetched 
            <span
              title="Monday, December 31, 2018 7:00 PM"
            >
              Dec 31, 2018
            </span>
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when no remote found on repository 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish repository
        </div>
        <div
          class="description"
        >
          Publish this repository to GitHub
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when progress shown 1`] = `
<div>
  <div
    class="toolbar-button has-progress push-pull-button"
  >
    <button
      class="button-component"
      disabled=""
      type="button"
    >
      <div
        class="progress"
        style="transform: scaleX(1);"
      />
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon spin"
        version="1.1"
        viewBox="0 0 12 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M10.24 7.4a4.15 4.15 0 0 1-1.2 3.6 4.346 4.346 0 0 1-5.41.54L4.8 10.4.5 9.8l.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 0 0 1.74-4.46l-1.75-.34zM2.96 5a4.346 4.346 0 0 1 5.41-.54L7.2 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54C.5 5.03-.06 6.65.01 8.26l1.75.35A4.17 4.17 0 0 1 2.96 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          something
        </div>
        <div
          class="description"
        >
          Hang on…
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when progress shown but network action off 1`] = `
<div>
  <div
    class="toolbar-button has-progress push-pull-button"
  >
    <button
      class="button-component"
      disabled=""
      type="button"
    >
      <div
        class="progress"
        style="transform: scaleX(1);"
      />
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 12 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M10.24 7.4a4.15 4.15 0 0 1-1.2 3.6 4.346 4.346 0 0 1-5.41.54L4.8 10.4.5 9.8l.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 0 0 1.74-4.46l-1.75-.34zM2.96 5a4.346 4.346 0 0 1 5.41-.54L7.2 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54C.5 5.03-.06 6.65.01 8.26l1.75.35A4.17 4.17 0 0 1 2.96 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          something
        </div>
        <div
          class="description"
        >
          Hang on…
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when pull.rebase enabled 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 10 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 7V3H3v4H0l5 6 5-6H7z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Pull origin with rebase
        </div>
        <div
          class="description"
        >
          Never fetched
        </div>
      </div>
      <div
        class="ahead-behind"
      >
        <span>
          2
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M3 5L0 9h2v2h2V9h2L3 5z"
            />
          </svg>
        </span>
        <span>
          5
          <svg
            aria-labelledby="octiconTitle octiconDescription"
            class="octicon"
            version="1.1"
            viewBox="0 0 6 16"
          >
            <title
              id="octiconTitle"
            />
            <desc
              id="octiconDescription"
            />
            <path
              d="M4 7V5H2v2H0l3 4 3-4H4z"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when remote set but no tracking branch set 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish branch
        </div>
        <div
          class="description"
        >
          Publish this branch to the remote
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when unborn branch 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      disabled=""
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 16 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M7 9H5l3-3 3 3H9v5H7V9zm5-4c0-.44-.91-3-4.5-3C5.08 2 3 3.92 3 6 1.02 6 0 7.52 0 9c0 1.53 1 3 3 3h3v-1.3H3c-1.62 0-1.7-1.42-1.7-1.7 0-.17.05-1.7 1.7-1.7h1.3V6c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V12h2c2.08 0 4-1.16 4-3.5C16 6.06 14.08 5 12 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Publish branch
        </div>
        <div
          class="description"
        >
          Cannot publish unborn HEAD
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<PushPullButton/> render when up to date with tracking branch 1`] = `
<div>
  <div
    class="toolbar-button push-pull-button"
  >
    <button
      class="button-component"
      type="button"
    >
      <svg
        aria-labelledby="octiconTitle octiconDescription"
        class="octicon icon"
        version="1.1"
        viewBox="0 0 12 16"
      >
        <title
          id="octiconTitle"
        />
        <desc
          id="octiconDescription"
        />
        <path
          d="M10.24 7.4a4.15 4.15 0 0 1-1.2 3.6 4.346 4.346 0 0 1-5.41.54L4.8 10.4.5 9.8l.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 0 0 1.74-4.46l-1.75-.34zM2.96 5a4.346 4.346 0 0 1 5.41-.54L7.2 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54C.5 5.03-.06 6.65.01 8.26l1.75.35A4.17 4.17 0 0 1 2.96 5z"
        />
      </svg>
      <div
        class="text"
      >
        <div
          class="title"
        >
          Fetch origin
        </div>
        <div
          class="description"
        >
          Never fetched
        </div>
      </div>
    </button>
  </div>
</div>
`;
